# w3gparser-implementations

./: .gitignore  README.md
.github/workflows/: ci.yml
validate/: package-lock.json  package.json  validate.ts
validate/replays/: 1187451104_Westii_SOULKEEPA_HammBamm_Gangster 2oo5_Sharky_Hope4dope_Wellspring Temple.w3g  3590548304_MisterWinner_D3xter_Last Refuge 15.w3g  616264966_Fish_KraV_LunaStyle_tomrentrag#2687_Dodo_kevinkuranyi#21312_introduction#11659_CaSpeND_Ekrezems Maze.w3g
w3ggo/: README.md  action.go  buf.go  convert.go  detect_retraining.go  events.go  example_test.go  gamedata.go  go.mod  infer_abilities.go  mappings.go  metadata.go  parse.go  player.go  protobuf.go  raw.go  replays_126_test.go  replays_129_test.go  replays_130_test.go  replays_131_test.go  replays_132_test.go  replays_200_test.go  types.go
w3ggo/cmd/parse/: main.go
w3grs/: Cargo.toml  README.md
w3grs/examples/: parse_replay.rs
w3grs/src/: convert.rs  detect_retraining.rs  infer_hero_abilities.rs  lib.rs  main.rs  mappings.rs  player.rs  replay.rs  types.rs
w3grs/src/parser/: action.rs  buffer.rs  game_data.rs  metadata.rs  mod.rs  protobuf.rs  raw.rs
w3grs/tests/: replays_126.rs  replays_129.rs  replays_130.rs  replays_131.rs  replays_132.rs  replays_200.rs
